--- a/wordle.ipynb
+++ b/wordle.ipynb
@@ -482,6 +482,8 @@
     "inp = pn.widgets.TextInput(placeholder='Enter your guess')\n",
     "button = pn.widgets.Button(name='Go!', disabled=True)\n",
     "html = pn.pane.HTML(sizing_mode='stretch_width')\n",
+    "\n",
+    "#grid\n",
     "grid = \"\"\"\n",
     "<link rel=\"stylesheet\" href=\"./style.css\">\n",
     "\"\"\"\n",
@@ -494,7 +496,24 @@
     "<br>\n",
     "\"\"\"\n",
     "grid += 6*container_row\n",
-    "html.object=grid\n",
+    "\n",
+    "# keyboard\n",
+    "keys = [\n",
+    "    (\"Q\", \"W\", \"E\", \"R\", \"T\", \"Y\", \"U\", \"I\", \"O\", \"P\"),\n",
+    "    (\"A\", \"S\", \"D\", \"F\", \"G\", \"H\", \"J\", \"K\", \"L\"),\n",
+    "    (\"Enter\", \"Z\", \"X\", \"C\", \"V\", \"B\", \"N\", \"M\", \"Back\")\n",
+    "]\n",
+    "keyboard = '<div id=\"keyboard\" class=\"keyboard\">'\n",
+    "for row in keys:\n",
+    "    keyboard += '<div class=\"keyboard-row\">'\n",
+    "    for k in row: \n",
+    "        if k in [\"Enter\", \"Back\"]:\n",
+    "            keyboard += f'<div id=\"key-{k}\" class=\"key wide-key\">{k}</div>'\n",
+    "        else:\n",
+    "            keyboard += f'<div id=\"key-{k}\" class=\"key\">{k}</div>'\n",
+    "keyboard += '</div>'\n",
+    "\n",
+    "html.object=grid + keyboard\n",
     "\n",
     "def disable_button(event):\n",
     "    button.disabled = event.new not in all_words\n",
@@ -503,32 +522,54 @@
     "\n",
     "display_all = '<link rel=\"stylesheet\" href=\"./style.css\">'\n",
     "guesses = []\n",
+    "letter_correct = []\n",
+    "letter_in_word = []\n",
+    "letter_not_word = []\n",
     "def update(event):\n",
     "    global display_all\n",
+    "    global keyboard\n",
     "    guess = inp.value\n",
     "    inp.value = ''\n",
-    "    \n",
     "    display = ''\n",
     "    for g, w in zip(guess, word):\n",
     "        if g == w:\n",
     "            display += f\"\"\"\n",
     "            <div id=\"guess-correct\"> {g} </div>\n",
     "            \"\"\"\n",
+    "            letter_correct.append(g)\n",
     "        elif g in word:\n",
     "            display += f\"\"\"\n",
     "            <div id=\"guess-in-word\"> {g} </div>\n",
     "            \"\"\"\n",
+    "            letter_in_word.append(g)\n",
     "        else:\n",
     "            display += f\"\"\"\n",
     "            <div id=\"guess-not-word\"> {g} </div>\n",
     "            \"\"\"\n",
+    "            letter_not_word.append(g)\n",
     "    display += \"\"\"<br>\"\"\"\n",
     "    display_all += display\n",
     "    guesses.append(guess)\n",
     "    \n",
     "    display_grid = display_all + (6-len(guesses)) * container_row\n",
     "    \n",
-    "    html.object = display_grid\n",
+    "    keyboard = '<div id=\"keyboard\" class=\"keyboard\">'\n",
+    "    for row in keys:\n",
+    "        keyboard += '<div class=\"keyboard-row\">'\n",
+    "        for k in row: \n",
+    "            if k in [\"Enter\", \"Back\"]:\n",
+    "                keyboard += f'<div id=\"key-{k}\" class=\"key wide-key\">{k}</div>'\n",
+    "            elif k.lower() in letter_correct: \n",
+    "                keyboard += f'<div id=\"key-{k}\" class=\"key correct\">{k}</div>'\n",
+    "            elif k.lower() in letter_in_word: \n",
+    "                keyboard += f'<div id=\"key-{k}\" class=\"key in-word\">{k}</div>'\n",
+    "            elif k.lower() in letter_not_word: \n",
+    "                keyboard += f'<div id=\"key-{k}\" class=\"key not-in-word\">{k}</div>'\n",
+    "            else:\n",
+    "                keyboard += f'<div id=\"key-{k}\" class=\"key\">{k}</div>'\n",
+    "    keyboard += '</div>'\n",
+    "    \n",
+    "    html.object = display_grid + keyboard\n",
     "\n",
     "button.on_click(update)\n",
     "\n",
